# DU

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
DU/: __init__.py  data.py  ml.py  utils.py  visualization.py
DU.egg-info/: PKG-INFO  SOURCES.txt
DU/api/: server.py
DU/app/: dashboard.py
DU/cli/: main.py
DU/core/: cleaner.py  loader.py
DU/dl/: __init__.py  model.py
DU/eda/: __init__.py  insights.py  summary.py  visualize.py
DU/ml/: evaluate.py  train.py
DU/utils/: logger.py
tests/: data.csv  dataset.py  test.py
