[project]
name = "du-data-understanding"
version = "0.1.0"
description = "Production-ready Data Understanding library for EDA, ML, API, and dashboards"
authors = [{name = "Urvil Patel"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["eda", "machine-learning", "fastapi", "streamlit", "tensorflow"]

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scikit-learn>=1.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "streamlit>=1.33",
    "tensorflow>=2.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
du = "du.cli.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["du*"]
